--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -31,6 +31,7 @@ Build-Depends: debhelper (>= 9),
     libfty-proto-dev,
     libcidr0-dev,
     libcxxtools-dev,
+    libfty-shm-dev,
     libnutclient-dev,
     systemd,
     dh-systemd,
@@ -56,6 +57,7 @@ Depends:
     libfty-proto-dev,
     libcidr0-dev,
     libcxxtools-dev,
+    libfty-shm-dev,
     libnutclient-dev,
     libfty-nut1 (= ${binary:Version})
 Description: fty-nut development tools
